Fix overflowing text on side bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1332,7 +1332,6 @@ nav{
   display: inline-block;
   font-size: 14px;
   font-weight: 500;
-  text-transform: uppercase;
 }
 .sidenav li a i{
   margin-right: 8px;
@@ -3891,7 +3890,7 @@ body[data-site_mode="dark"] .preloader-background{
   background-color: #9575CD;
     color: #f5f5f5;
 }
-[data-site_mode="dark"] .card-panel,{
+[data-site_mode="dark"] .card-panel {
   background-color: #37474F;
     color: #f5f5f5;
 }
